[tool.poetry]
name = "apicurioregistrysdk"
version = "3.0.4"
description = ""
authors = ["Andrea Peruffo <andrea.peruffo1982@gmail.com>"]
readme = "README.md"
packages = [{include = "apicurioregistrysdk"}]
include = [
    { path = "openapi.json", format=["sdist", "wheel"] },
    { path = "apicurioregistrysdk/client/**/*", format=["sdist", "wheel"] },
]
exclude = [
    { path = "apicurioregistrysdk/__pycache__", format=["sdist", "wheel"] },
]
license = "Apache 2.0"
homepage = "https://github.com/apicurio/apicurio-registry"
repository = "https://github.com/apicurio/apicurio-registry"
keywords = ["apicurio", "registry"]

[tool.poetry.dependencies]
python = "^3.9"
microsoft-kiota-abstractions = "^1.3.3"
microsoft-kiota-http = "^1.3.3"
microsoft-kiota-serialization-json = "^1.3.2"
microsoft-kiota-serialization-text = "^1.0.0"
microsoft-kiota-serialization-form = "^0.1.1"
microsoft-kiota-serialization-multipart = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
requests = "2.32.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core", "requests", "shutils"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "kiota-gen.py"

[tool.pytest.ini_options]
pythonpath = [ "apicurioregistrysdk" ]
asyncio_mode = "auto"

[tool.black]
extend-exclude = 'client'
