[tool.poetry]
name = "apicurioregistrysdk"
version = "2.6.11"
description = ""
authors = ["Andrea Peruffo <andrea.peruffo1982@gmail.com>"]
readme = "README.md"
packages = [{include = "apicurioregistrysdk"}]
include = [
    { path = "openapi.json", format=["sdist", "wheel"] },
    { path = "apicurioregistrysdk/client/**/*", format=["sdist", "wheel"] },
]
exclude = [
    { path = "apicurioregistrysdk/__pycache__", format=["sdist", "wheel"] },
]
license = "Apache 2.0"
homepage = "https://github.com/apicurio/apicurio-registry"
repository = "https://github.com/apicurio/apicurio-registry"
keywords = ["apicurio", "registry"]

[tool.poetry.dependencies]
python = "^3.9"
microsoft-kiota-abstractions = "^0.6.0"
microsoft-kiota-http = "^0.4.4"
microsoft-kiota-serialization-json = "^0.3.7"
microsoft-kiota-serialization-text = "^0.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
requests = "2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core", "requests", "shutils"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "kiota-gen.py"

[tool.pytest.ini_options]
pythonpath = [ "apicurioregistrysdk" ]
asyncio_mode = "auto"

[tool.black]
extend-exclude = 'client'
