[tool.poetry]
name = "apicurioregistrysdk"
version = "3.1.7"
description = "Python SDK for Apicurio Registry with LLM framework integrations"
authors = ["Andrea Peruffo <andrea.peruffo1982@gmail.com>"]
readme = "README.md"
packages = [{include = "apicurioregistrysdk"}]
include = [
    { path = "openapi.json", format=["sdist", "wheel"] },
    { path = "apicurioregistrysdk/client/**/*", format=["sdist", "wheel"] },
]
exclude = [
    { path = "apicurioregistrysdk/__pycache__", format=["sdist", "wheel"] },
]
license = "Apache 2.0"
homepage = "https://github.com/apicurio/apicurio-registry"
repository = "https://github.com/apicurio/apicurio-registry"
keywords = ["apicurio", "registry", "llm", "langchain", "llama-index", "ai", "ml"]

[tool.poetry.dependencies]
python = "^3.9"
microsoft-kiota-abstractions = "^1.3.3"
microsoft-kiota-http = "^1.3.3"
microsoft-kiota-serialization-json = "^1.3.2"
microsoft-kiota-serialization-text = "^1.0.0"
microsoft-kiota-serialization-form = "^0.1.1"
microsoft-kiota-serialization-multipart = "^0.1.0"
# Optional dependencies for YAML support and HTTP client
pyyaml = { version = "^6.0", optional = true }
httpx = { version = "^0.27.0", optional = true }

[tool.poetry.extras]
# LangChain integration
langchain = ["langchain-core", "pyyaml", "httpx"]
# LlamaIndex integration
llama-index = ["llama-index-core", "pyyaml", "httpx"]
# All LLM integrations
llm = ["langchain-core", "llama-index-core", "pyyaml", "httpx"]
# YAML support only
yaml = ["pyyaml"]

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
langchain-core = "^0.3.0"
llama-index-core = "^0.11.0"
pyyaml = "^6.0"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
requests = "2.32.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core", "requests", "shutils"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "kiota-gen.py"

[tool.pytest.ini_options]
pythonpath = [ "apicurioregistrysdk" ]
asyncio_mode = "auto"

[tool.black]
extend-exclude = 'client'
