[tool.poetry]
name = "apicurio-registry-serdes"
version = "0.1.0"
description = "Apicurio Registry Serializers and Deserializers for Python"
authors = ["Apicurio Team"]
readme = "README.md"
packages = [{include = "apicurio_registry_serdes"}]
license = "Apache-2.0"
homepage = "https://github.com/apicurio/apicurio-registry"
repository = "https://github.com/apicurio/apicurio-registry"
keywords = ["apicurio", "registry", "schema", "avro", "kafka", "serialization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
fastavro = "^1.9.0"
httpx = "^0.27.0"
cachetools = "^5.3.0"
kafka-python = { version = "^2.0.2", optional = true }
protobuf = { version = "^4.25.0", optional = true }
jsonschema = { version = "^4.20.0", optional = true }

[tool.poetry.extras]
kafka = ["kafka-python"]
protobuf = ["protobuf"]
jsonschema = ["jsonschema"]
all = ["kafka-python", "protobuf", "jsonschema"]

[tool.poetry.group.kafka]
optional = true

[tool.poetry.group.kafka.dependencies]
kafka-python = "^2.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.30.0"
protobuf = "^4.25.0"
jsonschema = "^4.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
